book an apointment alignment issues

--- a/src/components/global/header/header.module.scss
+++ b/src/components/global/header/header.module.scss
@@ -2,7 +2,7 @@
 }
 .header {
     background-color: #fff;
-    padding: 18px 0;
+    padding: 23px 0;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -11,7 +11,7 @@
         justify-content: space-between;
         align-items: center;
         .logo {
-            max-width: 190px;
+            max-width: 160px;
         }
 
         .menuItem{
